--- a/bot/connector-rocketchat/pom.xml
+++ b/bot/connector-rocketchat/pom.xml
@@ -42,6 +42,12 @@
             <groupId>org.litote.chat.rocket.sdk</groupId>
             <artifactId>core</artifactId>
             <version>${rocket}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-stdlib-jre7</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.litote.chat.rocket.sdk</groupId>
