--- a/pom.xml
+++ b/pom.xml
@@ -31,36 +31,36 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.2.71</kotlin>
+        <kotlin>1.3.10</kotlin>
 
         <slf4j>1.7.25</slf4j>
         <logback>1.2.3</logback>
         
-        <kotlin-logging>1.6.10</kotlin-logging>
+        <kotlin-logging>1.6.22</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>3.8.3</kmongo>
+        <kmongo>3.9.0</kmongo>
         <fongo>2.2.0-RC2</fongo>
-        <jackson>2.9.7</jackson>
-        <jackson-module>2.9.7</jackson-module>
-        <klaxon>3.0.8</klaxon>
-        <vertx>3.5.4</vertx>
-        <retrofit>2.4.0</retrofit>
-        <okhttp>3.11.0</okhttp>
-        <guava>26.0-jre</guava>
-        <google-auth>1.25.0</google-auth>
+        <jackson>2.9.8</jackson>
+        <jackson-module>2.9.8</jackson-module>
+        <klaxon>4.0.5</klaxon>
+        <vertx>3.6.2</vertx>
+        <retrofit>2.5.0</retrofit>
+        <okhttp>3.12.0</okhttp>
+        <guava>27.0.1-jre</guava>
+        <google-auth>1.27.0</google-auth>
         <jasypt>1.9.2</jasypt>
         <commons-csv>1.6</commons-csv>
         <emoji>5.0</emoji>
         <commons-codec>1.11</commons-codec>
         <commons-lang>3.8.1</commons-lang>
         <json>20180813</json>
-        <httpclient>4.5.5</httpclient>
+        <httpclient>4.5.6</httpclient>
 
-        <junit-jupiter>5.3.1</junit-jupiter>
+        <junit-jupiter>5.3.2</junit-jupiter>
         
-        <mockk>1.8.6</mockk>
-        <byte-buddy>1.9.1</byte-buddy>
+        <mockk>1.8.13.kotlin13</mockk>
+        <byte-buddy>1.9.6</byte-buddy>
 
         <plugin.surefire>2.22.0</plugin.surefire>
         <plugin.source>3.0.1</plugin.source>
