fixes previous commit
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/front/storage-mongo/pom.xml
+++ b/nlp/front/storage-mongo/pom.xml
@@ -76,6 +76,7 @@
                             <sourceDirs>
                                 <sourceDir>src/main/kotlin</sourceDir>
                                 <sourceDir>../shared/src/main/kotlin</sourceDir>
+                                <sourceDir>../../core/shared/src/main/kotlin</sourceDir>
                             </sourceDirs>
                             <annotationProcessorPaths>
                                 <annotationProcessorPath>
