--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -40,6 +40,7 @@
         <module>connector-alexa</module>
         <module>connector-rocketchat</module>
         <module>connector-whatsapp</module>
+        <module>connector-teams</module>
         <module>storage-mongo</module>
 
         <module>toolkit</module>
@@ -93,6 +94,11 @@
             <dependency>
                 <groupId>fr.vsct.tock</groupId>
                 <artifactId>tock-bot-connector-whatsapp</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.vsct.tock</groupId>
+                <artifactId>tock-bot-connector-teams</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
