--- a/bot/connector-teams/pom.xml
+++ b/bot/connector-teams/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>mockk</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>3.11.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
