--- a/bot/connector-teams/pom.xml
+++ b/bot/connector-teams/pom.xml
@@ -30,6 +30,7 @@
 
     <properties>
         <microsoft.bot>4.0.0-a1</microsoft.bot>
+        <mockwebserver>3.11.0</mockwebserver>
     </properties>
 
     <dependencies>
@@ -76,7 +77,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>mockwebserver</artifactId>
-            <version>3.11.0</version>
+            <version>${mockwebserver}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
