resolves #377 bot: add toolkit-base and test-base artifact
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -43,7 +43,9 @@
         <module>connector-teams</module>
         <module>storage-mongo</module>
 
+        <module>toolkit-base</module>
         <module>toolkit</module>
+        <module>test-base</module>
         <module>test</module>
 
         <module>admin</module>
@@ -54,6 +56,11 @@
             <dependency>
                 <groupId>fr.vsct.tock</groupId>
                 <artifactId>tock-bot-engine-jackson</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.vsct.tock</groupId>
+                <artifactId>bot-toolkit-base</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
