--- a/bot/toolkit-base/pom.xml
+++ b/bot/toolkit-base/pom.xml
@@ -24,18 +24,38 @@
         <version>2.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>bot-test</artifactId>
-    <name>Tock Bot Test Toolkit</name>
-    <description>Bot Test helpers and mocks</description>
+    <artifactId>bot-toolkit-base</artifactId>
+    <name>Tock Bot Toolkit Base</name>
+    <description>Bot Toolkit Base - to build chatbots with ease with no connector configured</description>
 
     <dependencies>
         <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>bot-toolkit</artifactId>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
         </dependency>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
-            <artifactId>bot-test-base</artifactId>
+            <artifactId>tock-bot-engine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-bot-engine-jackson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-bot-connector-rest</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-bot-storage-mongo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-translator-noop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-stt-noop</artifactId>
         </dependency>
     </dependencies>
 
