--- a/bot/toolkit/pom.xml
+++ b/bot/toolkit/pom.xml
@@ -30,17 +30,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-reflect</artifactId>
-        </dependency>
-        <dependency>
             <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-bot-engine</artifactId>
+            <artifactId>bot-toolkit-base</artifactId>
         </dependency>
-        <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-bot-engine-jackson</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-bot-connector-messenger</artifactId>
@@ -52,10 +45,6 @@
         <dependency>
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-bot-connector-alexa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-bot-connector-rest</artifactId>
         </dependency>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
@@ -72,18 +61,6 @@
         <dependency>
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-bot-connector-teams</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-bot-storage-mongo</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-translator-noop</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-stt-noop</artifactId>
         </dependency>
     </dependencies>
 
