resolves #375 add AWS JWT based SSO for admin
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -139,11 +139,6 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
-        <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-auth-jwt</artifactId>
-        </dependency>
-
 
         <dependency>
             <groupId>org.jasypt</groupId>
@@ -153,6 +148,11 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-auth-jwt</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
