#377 bot test: move connector helpers in bot-test-base
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/test-base/pom.xml
+++ b/bot/test-base/pom.xml
@@ -45,6 +45,11 @@
         </dependency>
 
         <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>bot-toolkit</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
             <scope>provided</scope>
