--- a/bot/connector-teams/pom.xml
+++ b/bot/connector-teams/pom.xml
@@ -31,6 +31,7 @@
     <properties>
         <microsoft.bot>4.0.0-a1</microsoft.bot>
         <mockwebserver>3.12.1</mockwebserver>
+        <nimbus-jose-jwt.version>6.8</nimbus-jose-jwt.version>
     </properties>
 
     <dependencies>
@@ -41,7 +42,7 @@
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
-            <version>6.8</version>
+            <version>${nimbus-jose-jwt.version}</version>
         </dependency>
         <dependency>
             <groupId>com.microsoft.bot.schema</groupId>
