fixes #389 bot-toolkit dependencies issue
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/toolkit/pom.xml
+++ b/bot/toolkit/pom.xml
@@ -62,6 +62,12 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-bot-connector-teams</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
