--- a/nlp/admin/server/pom.xml
+++ b/nlp/admin/server/pom.xml
@@ -55,6 +55,10 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-auth-jwt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-auth-oauth2</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
