--- a/nlp/admin/server/pom.xml
+++ b/nlp/admin/server/pom.xml
@@ -59,6 +59,11 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-auth-oauth2</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
