--- a/bot/connector-twitter/pom.xml
+++ b/bot/connector-twitter/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>tock-bot</artifactId>
         <groupId>fr.vsct.tock</groupId>
-        <version>2.0.2</version>
+        <version>19.3.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
