--- a/stt/pom.xml
+++ b/stt/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>19.3.0-SNAPSHOT</version>
+        <version>2.0.2</version>
     </parent>
 
     <artifactId>tock-stt</artifactId>
