--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>fr.vsct.tock</groupId>
     <artifactId>tock-root</artifactId>
-    <version>2.0.2</version>
+    <version>19.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Tock</name>
     <description>Tock, The Open Conversation Kit</description>
@@ -687,7 +687,7 @@
         <connection>scm:git:git@github.com:voyages-sncf-technologies/tock.git</connection>
         <developerConnection>scm:git:git@github.com:voyages-sncf-technologies/tock.git</developerConnection>
         <url>git@github.com:voyages-sncf-technologies/tock.git</url>
-        <tag>tock-2.0.2</tag>
+        <tag>tock-0.2.10-SNAPSHOT</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
