--- a/bot/toolkit-base/pom.xml
+++ b/bot/toolkit-base/pom.xml
@@ -57,6 +57,20 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-stt-noop</artifactId>
         </dependency>
+
+        <!-- force okhttp dependencies -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-urlconnection</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
