resolves #416 bot admin: first UI flow version
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/angular.json
+++ b/bot/admin/web/angular.json
@@ -29,7 +29,16 @@
               },
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/cytoscape/dist/cytoscape.min.js",
+              "node_modules/elkjs/lib/elk.bundled.js",
+              "node_modules/cytoscape-elk/cytoscape-elk.js",
+              "node_modules/webcola/WebCola/cola.min.js",
+              "node_modules/cytoscape-cola/cytoscape-cola.js",
+              "node_modules/cytoscape-cose-bilkent/cytoscape-cose-bilkent.js",
+              "node_modules/dagre/dist/dagre.min.js",
+              "node_modules/cytoscape-dagre/cytoscape-dagre.js"
+            ]
           },
           "configurations": {
             "production": {
