--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -27,6 +27,11 @@
     "angular-file-saver": "^1.1.3",
     "chart.js": "^2.7.0",
     "core-js": "^2.5.4",
+    "cytoscape": "^3.2.0",
+    "cytoscape-cose-bilkent": "^4.0.0",
+    "cytoscape-dagre": "^2.2.2",
+    "cytoscape-cola": "^2.3.0",
+    "cytoscape-elk": "^1.1.10",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.3.0",
