--- a/bot/connector-teams/pom.xml
+++ b/bot/connector-teams/pom.xml
@@ -32,6 +32,7 @@
         <microsoft.bot>4.0.0-a1</microsoft.bot>
         <mockwebserver>3.14.0</mockwebserver>
         <nimbus-jose-jwt.version>7.0.1</nimbus-jose-jwt.version>
+        <couroutine.version>1.1.1</couroutine.version>
     </properties>
 
     <dependencies>
@@ -42,7 +43,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.1.1</version>
+            <version>${couroutine.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nimbusds</groupId>
