--- a/bot/admin/web/pom.xml
+++ b/bot/admin/web/pom.xml
@@ -15,7 +15,8 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -38,24 +39,60 @@
             <phase>validate</phase>
             <configuration>
               <target>
-                <symlink link="${project.basedir}/src/app/applications" resource="${project.basedir}/../../../nlp/admin/web/src/app/applications" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/archive" resource="${project.basedir}/../../../nlp/admin/web/src/app/archive" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/build" resource="${project.basedir}/../../../nlp/admin/web/src/app/build" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/core-nlp" resource="${project.basedir}/../../../nlp/admin/web/src/app/core-nlp" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/entities" resource="${project.basedir}/../../../nlp/admin/web/src/app/entities" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/inbox" resource="${project.basedir}/../../../nlp/admin/web/src/app/inbox" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/intents" resource="${project.basedir}/../../../nlp/admin/web/src/app/intents" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/logs" resource="${project.basedir}/../../../nlp/admin/web/src/app/logs" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/model" resource="${project.basedir}/../../../nlp/admin/web/src/app/model" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/nlp-tabs" resource="${project.basedir}/../../../nlp/admin/web/src/app/nlp-tabs" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/quality-nlp" resource="${project.basedir}/../../../nlp/admin/web/src/app/quality-nlp" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/scroll" resource="${project.basedir}/../../../nlp/admin/web/src/app/scroll" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/search" resource="${project.basedir}/../../../nlp/admin/web/src/app/search" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/sentence-analysis" resource="${project.basedir}/../../../nlp/admin/web/src/app/sentence-analysis" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/sentences-scroll" resource="${project.basedir}/../../../nlp/admin/web/src/app/sentences-scroll" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/shared-nlp" resource="${project.basedir}/../../../nlp/admin/web/src/app/shared-nlp" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/test-nlp" resource="${project.basedir}/../../../nlp/admin/web/src/app/test-nlp" failonerror="false" overwrite="true" />
-                <symlink link="${project.basedir}/src/app/try" resource="${project.basedir}/../../../nlp/admin/web/src/app/try" failonerror="false" overwrite="true" />
+                <symlink link="${project.basedir}/src/app/applications"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/applications" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/archive"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/archive" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/build"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/build" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/core-nlp"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/core-nlp" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/entities"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/entities" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/inbox"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/inbox" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/intents"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/intents" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/logs"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/logs" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/model"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/model" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/nlp-tabs"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/nlp-tabs" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/quality-nlp"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/quality-nlp" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/scroll"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/scroll" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/search"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/search" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/sentence-analysis"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/sentence-analysis"
+                         failonerror="false" overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/sentences-scroll"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/sentences-scroll"
+                         failonerror="false" overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/shared-nlp"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/shared-nlp" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/test-nlp"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/test-nlp" failonerror="false"
+                         overwrite="true"/>
+                <symlink link="${project.basedir}/src/app/try"
+                         resource="${project.basedir}/../../../nlp/admin/web/src/app/try" failonerror="false"
+                         overwrite="true"/>
               </target>
             </configuration>
             <goals>
@@ -129,6 +166,29 @@
             </fileset>
             <fileset>
               <directory>dist</directory>
+            </fileset>
+            <fileset>
+              <directory>src/app</directory>
+              <includes>
+                <include>applications</include>
+                <include>archive</include>
+                <include>build</include>
+                <include>core-nlp</include>
+                <include>entities</include>
+                <include>inbox</include>
+                <include>intents</include>
+                <include>logs</include>
+                <include>model</include>
+                <include>nlp-tabs</include>
+                <include>quality-nlp</include>
+                <include>scroll</include>
+                <include>search</include>
+                <include>sentence-analysis</include>
+                <include>sentences-scroll</include>
+                <include>shared-nlp</include>
+                <include>test-nlp</include>
+                <include>try</include>
+              </includes>
             </fileset>
           </filesets>
         </configuration>
