--- a/bot/connector-twitter/pom.xml
+++ b/bot/connector-twitter/pom.xml
@@ -98,6 +98,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
