--- a/pom.xml
+++ b/pom.xml
@@ -31,42 +31,42 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.3.21</kotlin>
+        <kotlin>1.3.31</kotlin>
 
         <slf4j>1.7.25</slf4j>
         <logback>1.2.3</logback>
 
-        <kotlin-logging>1.6.25</kotlin-logging>
+        <kotlin-logging>1.6.26</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>3.10.0</kmongo>
-        <jackson>2.9.8</jackson>
-        <jackson-module>2.9.8</jackson-module>
+        <kmongo>3.10.2-SNAPSHOT</kmongo>
+        <jackson>2.9.9</jackson>
+        <jackson-module>2.9.9</jackson-module>
         <jackson-module-loader>0.1.0</jackson-module-loader>
         <jackson-data>0.1.0</jackson-data>
         <jackson-generator>0.3.1</jackson-generator>
         <klaxon>5.0.5</klaxon>
-        <vertx>3.6.3</vertx>
+        <vertx>3.7.0</vertx>
         <retrofit>2.5.0</retrofit>
-        <okhttp>3.14.0</okhttp>
+        <okhttp>3.14.1</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
-        <circuitbreaker>0.13.2</circuitbreaker>
+        <circuitbreaker>0.14.1</circuitbreaker>
         <guava>27.1-jre</guava>
-        <google-auth>1.28.0</google-auth>
+        <google-auth>1.29.0</google-auth>
         <jasypt>1.9.2</jasypt>
         <commons-csv>1.6</commons-csv>
         <emoji>5.0</emoji>
         <commons-codec>1.12</commons-codec>
-        <commons-lang>3.8.1</commons-lang>
+        <commons-lang>3.9</commons-lang>
         <json>20180813</json>
-        <httpclient>4.5.7</httpclient>
+        <httpclient>4.5.8</httpclient>
 
         <junit-jupiter>5.4.0</junit-jupiter>
 
         <mockk>1.9.3</mockk>
         <assertj>3.12.2</assertj>
-        <byte-buddy>1.9.11</byte-buddy>
+        <byte-buddy>1.9.12</byte-buddy>
 
         <plugin.surefire>3.0.0-M3</plugin.surefire>
         <plugin.source>3.0.1</plugin.source>
@@ -75,9 +75,9 @@
         <plugin.nexus-staging>1.6.8</plugin.nexus-staging>
         <plugin.dokka>0.9.18</plugin.dokka>
         <plugin.assembly>3.1.1</plugin.assembly>
-        <plugin.frontend>1.7.5</plugin.frontend>
+        <plugin.frontend>1.7.6</plugin.frontend>
         <plugin.clean>3.1.0</plugin.clean>
-        <plugin.jar>3.1.1</plugin.jar>
+        <plugin.jar>3.1.2</plugin.jar>
         <plugin.ant>1.8</plugin.ant>
 
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
