--- a/docs-mk/en/mkdocs.yml
+++ b/docs-mk/en/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
 theme:
   name: 'material'
   logo: 'assets/images/logo.svg'
-  favicon: 'assets/images/favicon.ico'
+  favicon: 'img/favicon.png'
 markdown_extensions:
   - admonition
   - codehilite
