resolves #489 admin: add translation option for sentences & i18n
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/server/pom.xml
+++ b/nlp/admin/server/pom.xml
@@ -37,7 +37,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-nlp-front-client</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-translator-noop</artifactId>
+        </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web</artifactId>
