--- a/translator/pom.xml
+++ b/translator/pom.xml
@@ -32,6 +32,7 @@
     <modules>
         <module>core</module>
         <module>noop</module>
+        <module>google-translate</module>
     </modules>
 
     <dependencies>
